<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShowExpenses">

    <TextView
        android:id="@+id/showExpenseDetailsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/expense_details"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/showExpenseTitleLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="32dp"
        android:text="@string/expense_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/showExpenseDetailsLabel" />

    <TextView
        android:id="@+id/showExpenseName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toEndOf="@+id/showExpenseTitleLabel"
        app:layout_constraintTop_toBottomOf="@+id/showExpenseDetailsLabel" />

    <TextView
        android:id="@+id/showExpenseCategoryLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="24dp"
        android:text="@string/category"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/showExpenseTitleLabel" />

    <TextView
        android:id="@+id/showExpenseCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toEndOf="@+id/showExpenseCategoryLabel"
        app:layout_constraintTop_toBottomOf="@+id/showExpenseName" />

    <TextView
        android:id="@+id/showExpenseAmountLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="24dp"
        android:text="@string/amount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/showExpenseCategoryLabel" />

    <TextView
        android:id="@+id/showExpenseAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="63dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toEndOf="@+id/showExpenseAmountLabel"
        app:layout_constraintTop_toBottomOf="@+id/showExpenseCategory" />

    <TextView
        android:id="@+id/showExpenseDateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="24dp"
        android:text="@string/date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/showExpenseAmountLabel" />

    <TextView
        android:id="@+id/showExpenseDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toEndOf="@+id/showExpenseDateLabel"
        app:layout_constraintTop_toBottomOf="@+id/showExpenseAmount" />

    <Button
        android:id="@+id/showEditExpenseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/edit_expense"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/showExpenseDateLabel" />

    <Button
        android:id="@+id/showCloseExpenseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/showEditExpenseButton" />
</androidx.constraintlayout.widget.ConstraintLayout>